--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <img src="logo.png" alt="Olding Logo">
     <h1>Git & Github Demo</h1>
     <p>Because the basics are important!</p>
+    <p>Learn more about Git in the <a href="https://git-scm.com/book/en/v2"> official docs</a> or <a href="https://kodego.ph">Enroll at Kodego</a></p>
 </body>
 </html>
