--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <h1>Git & Github Demo</h1>
     <p>Because the basics are important!</p>
     <p>Learn more about Git in the <a href="https://git-scm.com/book/en/v2"> official docs</a> or <a href="https://kodego.ph">Enroll at Kodego</a></p>
+
+    <footer>This is a footer</footer>
 </body>
 </html>
